feat(Visual Studio): arquivos do vs Studio

--- a/src/modulo-05-dotnet/exercicios/Megaman/Megaman/Megaman.csproj
+++ b/src/modulo-05-dotnet/exercicios/Megaman/Megaman/Megaman.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bass.cs" />
+    <Compile Include="Bot.cs" />
     <Compile Include="Megaman.cs" />
     <Compile Include="Robo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
