--- a/src/modulo-05-dotnet/exercicios/Megaman/Megaman.Test/Megaman.Test.csproj
+++ b/src/modulo-05-dotnet/exercicios/Megaman/Megaman.Test/Megaman.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MegamanTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtomanTests.cs" />
+    <Compile Include="RushTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Megaman\Megaman.csproj">
