--- a/src/modulo-05-dotnet/exercicios/Megaman/Megaman/Megaman.csproj
+++ b/src/modulo-05-dotnet/exercicios/Megaman/Megaman/Megaman.csproj
@@ -41,10 +41,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
+    <Compile Include="IUpgrade.cs" />
     <Compile Include="Megaman.cs" />
     <Compile Include="Robo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protoman.cs" />
+    <Compile Include="Rush.cs" />
+    <Compile Include="UpgradeDeAtaque.cs" />
+    <Compile Include="UpgradeDeDefesa.cs" />
+    <Compile Include="UpgradeLendario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
