feat(Exe02): feito exercicio da aula 03

--- a/src/modulo-05-dotnet/exercicios/MVC/MVC/MVC.csproj
+++ b/src/modulo-05-dotnet/exercicios/MVC/MVC/MVC.csproj
@@ -86,14 +86,41 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Estilos\alana.css" />
+    <Content Include="Content\Estilos\alice.css" />
+    <Content Include="Content\Estilos\alycio.css" />
+    <Content Include="Content\Estilos\andrews.css" />
+    <Content Include="Content\Estilos\arthur.css" />
+    <Content Include="Content\Estilos\calvingerling.css" />
+    <Content Include="Content\Estilos\davi.css" />
+    <Content Include="Content\Estilos\desafio-seletor-avancado.css" />
+    <Content Include="Content\Estilos\diuly.css" />
+    <Content Include="Content\Estilos\douglas.css" />
+    <Content Include="Content\Estilos\erico.css" />
+    <Content Include="Content\Estilos\fabriciorissetto.css" />
+    <Content Include="Content\Estilos\fernando-estilo.css" />
+    <Content Include="Content\Estilos\gustavo.css" />
+    <Content Include="Content\Estilos\hedo.css" />
+    <Content Include="Content\Estilos\leon.css" />
+    <Content Include="Content\Estilos\lucas.css" />
     <Content Include="Content\Estilos\main.css" />
+    <Content Include="Content\Estilos\marcelo.css" />
+    <Content Include="Content\Estilos\mauricio.css" />
+    <Content Include="Content\Estilos\michel.css" />
+    <Content Include="Content\Estilos\murillo.css" />
+    <Content Include="Content\Estilos\victor.css" />
+    <Content Include="Content\Estilos\victorribeiro.css" />
+    <Content Include="Content\Estilos\viniciusambrosi.css" />
+    <Content Include="Content\Estilos\viniciusAudibert.css" />
     <Content Include="Content\Imagens\back_site.jpg" />
+    <Content Include="Content\Imagens\blanka.png" />
     <Content Include="Content\Imagens\minha_foto.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DesafioController.cs" />
     <Compile Include="Controllers\ExemploController.cs" />
     <Compile Include="Controllers\StreetFighterController.cs" />
     <Compile Include="Controllers\TesteController.cs" />
@@ -116,7 +143,11 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Exemplo\UsandoLayout.cshtml" />
     <Content Include="Views\StreetFighter\Index.cshtml" />
-    <Content Include="Views\Shared\_Layout2.cshtml" />
+    <Content Include="Content\Estilos\BebasNeue.otf" />
+    <Content Include="Content\Estilos\Ketchum.otf" />
+    <Content Include="Content\Estilos\PokemonSolid.ttf" />
+    <None Include="Views\Desafio\Index.cshtml" />
+    <None Include="Views\StreetFighter\FichaTecnica.cshtml" />
     <None Include="Views\StreetFighter\Sobre.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -127,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Digimon\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
