--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.csproj
@@ -130,6 +130,10 @@
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
     <None Include="scripts\jquery-2.2.3.intellisense.js" />
+    <Content Include="Content\Datepicker\css\datepicker.css" />
+    <Content Include="Content\Datepicker\css\datepicker.min.css" />
+    <Content Include="scripts\Datepicker\js\bootstrap-datepicker.js" />
+    <Content Include="scripts\Datepicker\js\bootstrap-datepicker.min.js" />
     <Content Include="scripts\jquery-2.2.3.js" />
     <Content Include="scripts\jquery-2.2.3.min.js" />
     <Content Include="scripts\jquery-2.2.3.min.map" />
