--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/web.config
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="LojaNinja" />
+        <add namespace="LojaNinja.MVC" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
