--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Repositorio/LojaNinja.Repositorio.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Repositorio/LojaNinja.Repositorio.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRepositorioPedidos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositorioPedidos.cs" />
   </ItemGroup>
