--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Repositorio/LojaNinja.Repositorio.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Repositorio/LojaNinja.Repositorio.csproj
@@ -31,7 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,9 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IRepositorioPedidos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositorioPedidos.cs" />
+    <Compile Include="PedidoRepositorio.cs" />
+    <Compile Include="UsuarioRepositorio.cs" />
+    <Compile Include="UsuarioRepositorioADO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LojaNinja.Dominio\LojaNinja.Dominio.csproj">
