--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.MVC.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.MVC.csproj
@@ -157,6 +157,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Content Include="Content\Site\default.css" />
     <Compile Include="Controllers\PedidoController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -184,6 +185,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LojaNinja.Dominio\LojaNinja.Dominio.csproj">
