--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Web.config
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="LojaNinja" connectionString="Server=NB-002678;Database=LojaNinja;User Id=sa;Password=Crescer$5;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
