--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Dominio/LojaNinja.Dominio.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Dominio/LojaNinja.Dominio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IPedidoRepositorio.cs" />
     <Compile Include="IUsuarioRepositorio.cs" />
     <Compile Include="Pedido.cs" />
+    <Compile Include="PedidoServico.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoPagamento.cs" />
     <Compile Include="Usuario.cs" />
