--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.MVC.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.MVC.csproj
@@ -151,10 +151,13 @@
     <Content Include="scripts\Site\default.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
     <Content Include="scripts\Site\pedido.js" />
+    <Content Include="scripts\Site\usuario.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Extensions\UsuarioExtension.cs" />
     <Compile Include="Filters\LojaNinjaToken.cs" />
     <Compile Include="Models\UsuarioViewModel.cs" />
     <Compile Include="Services\ServicoDeSessao.cs" />
@@ -179,6 +182,9 @@
     <Content Include="Views\Pedido\Detalhes.cshtml" />
     <Content Include="Views\Pedido\Index.cshtml" />
     <Content Include="Views\Pedido\Deletar.cshtml" />
+    <Content Include="Views\Usuario\Cadastro.cshtml" />
+    <Content Include="Views\Usuario\Login.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -188,7 +194,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LojaNinja.Dominio\LojaNinja.Dominio.csproj">
