--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.MVC.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/LojaNinja.MVC.csproj
@@ -43,6 +43,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.0.1011, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.0\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -199,6 +207,14 @@
     <ProjectReference Include="..\LojaNinja.Dominio\LojaNinja.Dominio.csproj">
       <Project>{ea5e42de-5545-4db0-bcec-bc9d8fca8334}</Project>
       <Name>LojaNinja.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LojaNinja.Repositorio.ADO\LojaNinja.Repositorio.ADO.csproj">
+      <Project>{174e70a6-6dc1-4d35-8c6d-e437e5cd07ec}</Project>
+      <Name>LojaNinja.Repositorio.ADO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LojaNinja.Repositorio.EF\LojaNinja.Repositorio.EF.csproj">
+      <Project>{dced1617-3624-4c11-bd92-82ce824dcbb2}</Project>
+      <Name>LojaNinja.Repositorio.EF</Name>
     </ProjectReference>
     <ProjectReference Include="..\LojaNinja.Repositorio\LojaNinja.Repositorio.csproj">
       <Project>{e8c45911-22f7-4359-9641-70a650cdeae9}</Project>
