--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Dominio/LojaNinja.Dominio.csproj
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja.Dominio/LojaNinja.Dominio.csproj
@@ -37,19 +37,22 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\CriptografiaServico.cs" />
     <Compile Include="IPedidoRepositorio.cs" />
+    <Compile Include="IPermissaoRepositorio.cs" />
     <Compile Include="IUsuarioRepositorio.cs" />
     <Compile Include="Pedido.cs" />
-    <Compile Include="PedidoServico.cs" />
+    <Compile Include="Services\PedidoServico.cs" />
+    <Compile Include="Permissao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoPagamento.cs" />
     <Compile Include="Usuario.cs" />
-    <Compile Include="UsuarioServico.cs" />
+    <Compile Include="Services\UsuarioServico.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
