--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Web.config
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="LojaNinja" connectionString="Server=NB-002678;Database=LojaNinja;User Id=sa;Password=Crescer$5;" providerName="System.Data.SqlClient" />
+    <!--<add name="LojaNinja" connectionString="Server=NB-002678;Database=LojaNinja;User Id=sa;Password=Crescer$5;" providerName="System.Data.SqlClient" />-->
+    <add name="LojaNinja" connectionString="Server=ERICO-PC\SQLERICO;Database=LojaNinja;User Id=sa;Password=pass@word1;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
