--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/CdZ.MVC.csproj
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/CdZ.MVC.csproj
@@ -101,7 +101,6 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Custom\principal.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -113,6 +112,8 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\Controllers\CavaleiroController.js" />
+    <Content Include="Scripts\Custom\Initial.js" />
     <Content Include="Scripts\Custom\overrides-validacao.js" />
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -124,7 +125,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Models\Cavaleiro.js" />
     <Content Include="Scripts\Services\ServicoDeCavaleiros.js" />
+    <Content Include="Scripts\Services\ServicoDeMensagem.js" />
     <Content Include="Scripts\Views\Cavaleiro\Index.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -157,6 +160,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Usuario\Cadastrar.cshtml" />
     <Content Include="Views\Cavaleiro\Index.cshtml" />
+    <Content Include="Views\Shared\_UserLoginPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
