--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,5 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+/src/modulo-08-java/aulas/01/Exercicio1/nbproject/private/
+/src/modulo-08-java/aulas/01/Exercicio1/build/
