test(MeuStringUtil, MeuCalendarioUtil, Parcelator): feito testes para os exercicios da aula 1.

--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,5 @@ paket-files/
 *.sln.iml
 /src/modulo-08-java/aulas/01/Exercicio1/nbproject/private/
 /src/modulo-08-java/aulas/01/Exercicio1/build/
+/src/modulo-08-java/exercicios/Exe01/nbproject/
+/src/modulo-08-java/exercicios/Exe01/target/
