feat(Chat, Run, MyFile): criado chat.

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ paket-files/
 /src/modulo-08-java/aulas/01/Exercicio1/build/
 /src/modulo-08-java/exercicios/Exe01/nbproject/
 /src/modulo-08-java/exercicios/Exe01/target/
+/src/modulo-08-java/aulas/02/target/
