feat(Pessoa, IPessoa, PessoaRepositorio, Run): feito crud de pessoas no banco.

--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,4 @@ paket-files/
 /src/modulo-08-java/exercicios/Exe01/nbproject/
 /src/modulo-08-java/exercicios/Exe01/target/
 /src/modulo-08-java/aulas/02/target/
+/src/modulo-08-java/aulas/modulo-08-java/03/target/
