--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,4 @@ paket-files/
 /src/modulo-08-java/exercicios/Exe01/target/
 /src/modulo-08-java/aulas/02/target/
 /src/modulo-08-java/aulas/modulo-08-java/03/target/
+/src/modulo-08-java/aulas/modulo-08-java/03/nbproject/
