feat(MeuSqlUtils): feito exercicio 3.

--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,4 @@ paket-files/
 /src/modulo-08-java/aulas/02/target/
 /src/modulo-08-java/aulas/modulo-08-java/03/target/
 /src/modulo-08-java/aulas/modulo-08-java/03/nbproject/
+/src/modulo-08-java/exercicios/Exe03/target/
