--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/pom.xml
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/pom.xml
@@ -2,17 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>br.cwi.crescer</groupId>
-    <artifactId>Exe02</artifactId>
+    <artifactId>modulo-08-java-exercicios</artifactId>
     <version>1.0.0</version>
-    <packaging>jar</packaging>
-    <parent>
-        <groupId>br.cwi.crescer</groupId>
-        <artifactId>modulo-08-java-exercicios</artifactId>
-        <version>1.0.0</version>
-    </parent>
+    <packaging>pom</packaging>
+    <modules>
+        <module>../Exe01</module>
+        <module>../Exe02</module>
+        <module>../Exe03</module>
+    </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 </project>
