--- a/src/modulo-08-java/aulas/modulo-08-java/pom.xml
+++ b/src/modulo-08-java/aulas/modulo-08-java/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>../02</module>
         <module>03</module>
+        <module>04</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
