feat(Pessoa, Cidade, Cliente, Pedido, PedidoItem, Produto, Material, ProdutoMaterial): começado exercicio 04.

--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/pom.xml
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/pom.xml
@@ -9,6 +9,7 @@
         <module>Exe01</module>
         <module>Exe02</module>
         <module>Exe03</module>
+        <module>Exe04</module>
     </modules>
     <properties> 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
