--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,4 @@ paket-files/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe01/target/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe03/target/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe04/target/
+/src/modulo-08-java/aulas/modulo-08-java/05/target/
