--- a/src/modulo-08-java/aulas/modulo-08-java/pom.xml
+++ b/src/modulo-08-java/aulas/modulo-08-java/pom.xml
@@ -9,8 +9,11 @@
         <module>../02</module>
         <module>03</module>
         <module>04</module>
-    </modules>
+    <module>05</module>
+  </modules>
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
