--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,4 @@ paket-files/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe03/target/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe04/target/
 /src/modulo-08-java/aulas/modulo-08-java/05/target/
+/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe05/target/
