--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ paket-files/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe04/target/
 /src/modulo-08-java/aulas/modulo-08-java/05/target/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe05/target/
+/src/modulo-08-java/aulas/modulo-08-java/06/crescer-web/target/
