--- a/.gitignore
+++ b/.gitignore
@@ -284,3 +284,4 @@ paket-files/
 /src/modulo-08-java/aulas/modulo-08-java/05/target/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe05/target/
 /src/modulo-08-java/aulas/modulo-08-java/06/crescer-web/target/
+/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/target/
