--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/pom.xml
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>06</artifactId>
+    <artifactId>Exe06</artifactId>
     <groupId>br.cwi.crescer</groupId>
-    <version>1.0.0.0</version>
+    <version>1.0.0</version>
   </parent>
 
     <groupId>br.cwi.crescer</groupId>
     <artifactId>crescer-web</artifactId>
-    <version>1.0.0.0</version>
+    <version>1.0.0</version>
     <packaging>war</packaging>
 
     <name>crescer-web</name>
