--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/pom.xml
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/pom.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>br.cwi.crescer</groupId>
-    <artifactId>modulo-08-java-exercicios</artifactId>
-    <version>1.0.0</version>
+    <parent>
+        <groupId>br.cwi.crescer</groupId>
+        <artifactId>modulo-08-java-exercicios</artifactId>
+        <version>1.0.0</version>
+    </parent>
+    
+    <artifactId>Exe06</artifactId>
     <packaging>pom</packaging>
+    
     <modules>
-        <module>Exe01</module>
-        <module>Exe02</module>
-        <module>Exe03</module>
-        <module>Exe04</module>
-        <module>Exe05</module>
-        <module>Exe06</module>
+      <module>crescer-web</module>
     </modules>
-    <properties> 
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+    <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
