feat(Aula07): feito exercicio da aula 07.

--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,5 @@ paket-files/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe05/target/
 /src/modulo-08-java/aulas/modulo-08-java/06/crescer-web/target/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/target/
+/src/modulo-08-java/aulas/modulo-08-java/07/crescer-entity/target/
+/src/modulo-08-java/aulas/modulo-08-java/07/crescer-web/target/
