feat(Exe06): implementado basico do exercicio 07.

--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/pom.xml
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/pom.xml
@@ -12,6 +12,7 @@
     
     <modules>
       <module>crescer-web</module>
+        <module>crescer-entity</module>
     </modules>
     
     <properties>
