--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,4 @@ paket-files/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/target/
 /src/modulo-08-java/aulas/modulo-08-java/07/crescer-entity/target/
 /src/modulo-08-java/aulas/modulo-08-java/07/crescer-web/target/
+/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-entity/target/
