--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,4 @@ paket-files/
 /src/modulo-08-java/aulas/modulo-08-java/07/crescer-entity/target/
 /src/modulo-08-java/aulas/modulo-08-java/07/crescer-web/target/
 /src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-entity/target/
+/src/modulo-08-java/aulas/modulo-08-java/08/spring-crescer-web/target/
