--- a/src/modulo-08-java/aulas/modulo-08-java/pom.xml
+++ b/src/modulo-08-java/aulas/modulo-08-java/pom.xml
@@ -12,6 +12,7 @@
         <module>05</module>
         <module>06</module>
         <module>07</module>
+        <module>08</module>
     </modules>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
